--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
     # Profile information
     name: Ian Fogelman
     tagline: SQL Expert & App Developer
-    avatar: IMG_1761.jpg #IMG_17612.jpg #Ianvex.PNG  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar: 0.jpg #IMG_17612.jpg #Ianvex.PNG  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
     
     # Sidebar links
     email: IanFogelman@gmail.com
